--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://asfahstudio.github.io/"
 languageCode = "en-us"
 title = "asfahstudio"
 theme = "hai"
